--- a/src/site/_variables.scss
+++ b/src/site/_variables.scss
@@ -10,6 +10,8 @@ $font-height: 20px;
 
 $color-foreground: #202020;
 $color-background: #ffffff;
+$menu-background: #747678;
+$nav-hover-text: #ffffff;
 $color-link: #2020e0;
 $accent: #2954ff;
 $accent-focus: #436eff;
