changed background color

--- a/src/site/_variables.scss
+++ b/src/site/_variables.scss
@@ -9,7 +9,7 @@ $font-height: 20px;
 //== Color
 
 $color-foreground: #202020;
-$color-background: #ffffff;
+$color-background: red;
 $menu-background: #747678;
 $nav-hover-text: #ffffff;
 $color-link: #2020e0;
@@ -29,6 +29,7 @@ $error-hover: #be1e26;
 $success: #268e6c;
 $success-hover: #0d7553;
 $transparent: rgba(0, 0, 0, 0);
+$title-color: blue;
 
 //== Grid
 
