--- a/src/site/_variables.scss
+++ b/src/site/_variables.scss
@@ -9,7 +9,7 @@ $font-height: 20px;
 //== Color
 
 $color-foreground: #202020;
-$color-background: red;
+$color-background: #ffffff;
 $menu-background: #747678;
 $nav-hover-text: #ffffff;
 $color-link: #2020e0;
